FLY-4060 resultranking log display values

--- a/findly-builder/src/app/components/result-ranking/result-ranking.component.html
+++ b/findly-builder/src/app/components/result-ranking/result-ranking.component.html
@@ -369,7 +369,7 @@
                             <div class="card-acc">
                                 <div class="card-header-acc" *ngIf="log && log.action != 'restored' && log.target">
                                     <a class="card-link-acc link-block" data-toggle="collapse"
-                                        href="#collapse_log_{{i}}" *ngIf="log.target.contentinfo && log.target.contentInfo._source">
+                                        href="#collapse_log_{{i}}">
                                         {{log.displayMessage }} - {{ log.target.contentType}}</a>
                                     <a class="card-link-acc link-block" data-toggle="collapse"
                                         href="#collapse_log_{{i}}"
